--- a/mini_project_x/pubspec.yaml
+++ b/mini_project_x/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
 dev_dependencies:
   animated_splash_screen: ^1.3.0
+  bouncing_widget: ^2.0.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
