--- a/mini_project_x/pubspec.yaml
+++ b/mini_project_x/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
   sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
+  camera: null
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  # tflite:
 
 dev_dependencies:
   animated_splash_screen: ^1.3.0
@@ -20,6 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   get: ^4.6.5
+  # tflite: ^1.1.2
 
 flutter:
   uses-material-design: true
