--- a/mini_project_x/android/app/src/main/AndroidManifest.xml
+++ b/mini_project_x/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mini_project_x">
    <application
-        android:label="mini_project_x"
+        android:label="Sigene"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
