--- a/mini_project_x/pubspec.yaml
+++ b/mini_project_x/pubspec.yaml
@@ -13,16 +13,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  # tflite:
-
 dev_dependencies:
   animated_splash_screen: ^1.3.0
   bouncing_widget: ^2.0.0
   flutter_lints: ^2.0.0
+  flutter_screenutil: ^5.5.3+2
   flutter_test:
     sdk: flutter
   get: ^4.6.5
-  # tflite: ^1.1.2
 
 flutter:
   uses-material-design: true
