models and labels added but integration errors persist

--- a/mini_project_x/pubspec.yaml
+++ b/mini_project_x/pubspec.yaml
@@ -21,6 +21,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   get: ^4.6.5
+  tensorflow_native: ^0.0.0
+  tflite: ^1.1.2
 
 flutter:
   uses-material-design: true
